# kine2go-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: code-quality.yml
docs/: index.html  serve.py
docs/static/css/: index.css
go2_genesis/: cfgs.py  eval.py  ghost_env.py  locomotion_env.py  logging_utils.py  train.py  trajectory_io.py  utils.py
go2_genesis/wrappers/: observation_wrapper.py  rl_wrapper.py
motion_imitation/: config.py  imitation.py  imitation_eval.py  imitation_wrapper.py  motion_ranges.txt  utils.py
motion_retargeting/: add_timestamp.py  config.py  env.py  main.py
motion_retargeting/data/: README.md
motion_retargeting/data/AI4Animation/: LICENSE.txt
motion_retargeting/data/Horse/: Horse1_M1_trot1_kinematics.csv  Horse1_M1_trot2_kinematics.csv  Horse1_M1_trot3_kinematics.csv  Horse1_M1_walk1_kinematics.csv  Horse1_M1_walk2_kinematics.csv  Horse1_M1_walk3_kinematics.csv  Horse1_M2_trot1_kinematics.csv  Horse1_M2_trot2_kinematics.csv  Horse1_M2_trot3_kinematics.csv  Horse1_M2_walk1_kinematics.csv  Horse1_M2_walk2_kinematics.csv  Horse1_M2_walk3_kinematics.csv  Horse1_M3_trot1_kinematics.csv  Horse1_M3_trot2_kinematics.csv  Horse1_M3_trot3_kinematics.csv  Horse1_M3_walk1_kinematics.csv  Horse1_M3_walk2_kinematics.csv  Horse1_M3_walk3_kinematics.csv
motion_retargeting/datasets/: __init__.py  ai4animation.py  base.py  factory.py  horse.py  solo8.py
tools/: cut_trajectory.py  gather_trajectories.py  visualize_trajectory.py
(+10 files in other folders)
